--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^4.2.5",
+    "mime": "^3.0.0",
     "mocha": "^8.1.3",
     "semantic-release": "^17.0.7",
     "semantic-release-slack-bot": "^1.6.2",
